discussion/kv_engine/173507/173507_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add SnapshotRequirements and checks

RangeScans can be created with optional parameters that state a
vbucket uuid and sequence number.

This commit adds:

* in-memory uuid check on the frontend worker, failing the create
  with "not_my_vbucket"
* snapshot "must-contain" seqno check in the I/O task (optional at
  the request of the caller).

A future commit will add checks that the seqno was at least persisted
with a wait+timeout if not.

Change-Id: I5b03fadbe2cece10195ba2313e2619d11674fbfe

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-05 14:07:54.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-05 15:52:23.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17294/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:20:5: error: unknown type name "uint64_t" [clang-diagnostic-error]
    uint64_t vbUuid{0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:22:5: error: unknown type name "uint64_t" [clang-diagnostic-error]
    uint64_t seqno{0};
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17294/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:20:5:
error: unknown type name "uint64_t" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17294/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38565/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45920/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16287/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20077/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18231/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19393/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6997/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27451/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6905/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19051/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
